<resources>
    <string name="app_name">Islam Digital Ecosystem</string>

    <string name="checkbox">com.example.islamdigitalecosystem.checkbox</string>
    <string name="email">com.example.islamdigitalecosystem.username</string>
    <string name="password">com.example.islamdigitalecosystem.password</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="open">open</string>

    <string-array name="roleList">
        <item>Guru</item>
        <item>Murid</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pilih_role">Pilih Role!</string>
    <string name="no_handphone">No Handphone</string>
    <string name="click_here">Click Here</string>
    <string name="hello_user">Hello User</string>
    <string name="soal">Soal</string>
    <string name="pilihan">Pilihan :</string>
    <string name="pil_1">Pil. 1 :</string>
    <string name="pil_2">Pil. 2 :</string>
    <string name="pil_3">Pil. 3 :</string>
    <string name="pil_4">Pil. 4 :</string>
    <string name="kunci">Kunci :</string>
    <string name="changeMedia">Change Media :</string>
    <string name="save_media">Save Media</string>
    <string name="change_image">Change Image</string>
    <string name="change_audio">Change Audio</string>
    <string name="save_question">Save Question</string>
    <string name="tulis_materi_disini_optional">Tulis Materi Disini (Optional)</string>
    <string name="judul_materi">Judul Materi</string>
    <string name="upload">Upload</string>
    <string name="select_file">Select File</string>
    <string name="download_file">Download File</string>
    <string name="please_dwnld">Silahkan Klik Download PDF untuk mendownload Materi</string>
    <string name="Username" />
    <string name="delete_question">Delete Question</string>
    <string name="defaultScreen">Silahkan Klik Download PDF untuk mendownload pdf</string>
    <string name="save_change">Save Change</string>
    <string name="materi_not_available">Materi Is Not Available</string>

</resources>
