<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changeMedia">

    <ImageView
        android:id="@+id/mediaPlaceHld"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:onClick="playAudio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btSaveMedia"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        app:srcCompat="@drawable/play" />

    <Button
        android:id="@+id/changeImage"
        android:layout_width="155dp"
        android:layout_height="38dp"
        android:layout_marginTop="288dp"
        android:background="@drawable/bg_button"
        android:onClick="changeImage"
        android:text="@string/change_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/changeAudio"
        android:layout_width="155dp"
        android:layout_height="38dp"
        android:layout_marginTop="288dp"
        android:background="@drawable/bg_button"
        android:onClick="changeAudio"
        android:text="@string/change_audio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btSaveMedia"
        android:layout_width="155dp"
        android:layout_height="38dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/bg_button"
        android:onClick="saveMedia"
        android:text="@string/save_media"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>